feat(timeline): ruler

--- a/packages/timeline/src/index.css
+++ b/packages/timeline/src/index.css
@@ -83,3 +83,27 @@
     }
   }
 }
+
+.docs-ruler {
+  background: #353535;
+  color: #ffffff;
+  border-bottom: 1px solid #222222;
+}
+
+.docs-ruler-header {
+  background: #2c2c2c;
+  border-right: 1px solid #222222;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 12px;
+}
+
+.docs-tick {
+  width: 100%;
+  height: 100%;
+  border-right: 1px solid #222222;
+  padding: 2px 4px;
+  font-size: 10px;
+  color: #9f9f9f;
+}
