--- a/packages/timeline/src/index.css
+++ b/packages/timeline/src/index.css
@@ -100,10 +100,27 @@
 }
 
 .docs-tick {
+  position: relative;
   width: 100%;
   height: 100%;
   border-right: 1px solid #222222;
   padding: 2px 4px;
   font-size: 10px;
   color: #9f9f9f;
+}
+
+.docs-subticks {
+  position: absolute;
+  bottom: 0;
+  left: calc(10% - 1px);
+  right: 1px;
+  height: 10px;
+  overflow: hidden;
+  background: repeating-linear-gradient(
+    to right,
+    #575757,
+    #575757 1px,
+    transparent 1px,
+    transparent 10%
+  );
 }
