--- a/packages/timeline/src/index.css
+++ b/packages/timeline/src/index.css
@@ -68,9 +68,14 @@
     background: #3593af;
   }
 
+  &.moved,
   &.dragging {
+    outline-offset: -1px;
+    outline: 1px solid rgba(255, 255, 255,0.75);
+  }
+
+  &.moved {
     background: #d1a162 !important;
-    opacity: 0.8;
   }
 
   &.selected {
