--- a/packages/timeline/src/index.css
+++ b/packages/timeline/src/index.css
@@ -68,10 +68,8 @@
     background: #3593af;
   }
 
-  &.moved,
   &.dragging {
-    outline-offset: -1px;
-    outline: 1px solid rgba(255, 255, 255,0.75);
+    opacity: 0;
   }
 
   &.moved {
