--- a/packages/timeline/src/index.css
+++ b/packages/timeline/src/index.css
@@ -62,7 +62,12 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   cursor: pointer;
-  padding: 0 4px;
+  padding: 0 6px;
+
+  display: flex;
+  align-items: center;
+  font-size: 12px;
+  color: rgba(0, 0, 0, 0.49);
 
   &:hover {
     background: #3593af;
@@ -82,23 +87,23 @@
     outline-offset: -1px;
     outline: 1px solid rgba(255, 255, 255,0.75);
 
-    &:after,
-    &:before {
-      content: "";
-      position: absolute;
-      top: 0;
-      width: 4px;
-      height: 100%;
-      background: #ffffff;
-    }
+    /*&:after,*/
+    /*&:before {*/
+    /*  content: "";*/
+    /*  position: absolute;*/
+    /*  top: 0;*/
+    /*  width: 4px;*/
+    /*  height: 100%;*/
+    /*  background: #ffffff;*/
+    /*}*/
 
-    &:before {
-      left: 0;
-    }
+    /*&:before {*/
+    /*  left: 0;*/
+    /*}*/
 
-    &:after {
-      right: 0;
-    }
+    /*&:after {*/
+    /*  right: 0;*/
+    /*}*/
   }
 }
 
